// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageHeader is rendered 1`] = `
<header
  aria-label="aria-label"
  class="euiPageHeader testClass1 testClass2 css-87zvdi-euiPageHeader-EuiPageHeader"
  data-test-subj="test subject string"
>
  <div
    class="css-8hff4w-euiPageHeaderContent-euiPageHeaderWidth"
  >
    <div
      class="css-ljpjbj-flex-center"
    >
      Anything
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props alignItems bottom is rendered 1`] = `
<header
  class="euiPageHeader css-87zvdi-euiPageHeader-EuiPageHeader"
>
  <div
    class="euiPageHeaderContent css-8hff4w-euiPageHeaderContent-euiPageHeaderWidth"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      >
        <h1
          class="euiTitle css-1bexacr-euiTitle-l"
        >
          Page title
        </h1>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--wrap css-dl3a9l-rightSideFlexItem"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 1
            </button>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props alignItems center is rendered 1`] = `
<header
  class="euiPageHeader css-87zvdi-euiPageHeader-EuiPageHeader"
>
  <div
    class="euiPageHeaderContent css-8hff4w-euiPageHeaderContent-euiPageHeaderWidth"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      >
        <h1
          class="euiTitle css-1bexacr-euiTitle-l"
        >
          Page title
        </h1>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--wrap css-dl3a9l-rightSideFlexItem"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 1
            </button>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props alignItems stretch is rendered 1`] = `
<header
  class="euiPageHeader css-87zvdi-euiPageHeader-EuiPageHeader"
>
  <div
    class="euiPageHeaderContent css-8hff4w-euiPageHeaderContent-euiPageHeaderWidth"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      >
        <h1
          class="euiTitle css-1bexacr-euiTitle-l"
        >
          Page title
        </h1>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--wrap css-dl3a9l-rightSideFlexItem"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 1
            </button>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props alignItems top is rendered 1`] = `
<header
  class="euiPageHeader css-87zvdi-euiPageHeader-EuiPageHeader"
>
  <div
    class="euiPageHeaderContent css-8hff4w-euiPageHeaderContent-euiPageHeaderWidth"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      >
        <h1
          class="euiTitle css-1bexacr-euiTitle-l"
        >
          Page title
        </h1>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--wrap css-dl3a9l-rightSideFlexItem"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 1
            </button>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props page content props are passed down is rendered 1`] = `
<header
  class="euiPageHeader css-87zvdi-euiPageHeader-EuiPageHeader"
>
  <div
    class="euiPageHeaderContent css-j8sx1r-euiPageHeaderContent-euiPageHeaderWidth-border"
  >
    <nav
      aria-label="aria-label"
      class="euiBreadcrumbs testClass1 testClass2 euiBreadcrumbs--truncate"
      data-test-subj="test subject string"
    >
      <ol
        class="euiBreadcrumbs__list"
      >
        <li
          class="euiBreadcrumb"
        >
          <a
            class="euiLink euiLink--primary euiBreadcrumb__content customClass"
            data-test-subj="breadcrumbsAnimals"
            href="#"
            rel="noreferrer"
          >
            Animals
          </a>
        </li>
        <li
          class="euiBreadcrumb euiBreadcrumb--last"
        >
          <span
            aria-current="page"
            class="euiBreadcrumb__content"
          >
            Edit
          </span>
        </li>
      </ol>
    </nav>
    <div
      class="euiSpacer euiSpacer--s css-i2qclb-euiSpacer-s"
    />
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      >
        <h1
          aria-label="aria-label"
          class="euiTitle testClass1 testClass2 css-1bexacr-euiTitle-l"
          data-test-subj="test subject string"
        >
          <span
            class="testClass1 testClass2 css-qz0pxv-euiPageHeaderContent__titleIcon"
            data-euiicon-type="logoKibana"
            data-test-subj="test subject string"
          >
            aria-label
          </span>
          Page title
        </h1>
        <div
          class="euiSpacer euiSpacer--l css-jz428s-euiSpacer-l"
        />
        <div
          class="euiText euiText--medium euiText--constrainedWidth"
        >
          <p>
            Description
          </p>
        </div>
        <div
          class="euiPageHeaderContent__bottom"
        >
          <div
            class="euiSpacer euiSpacer--l css-jz428s-euiSpacer-l"
          />
          <p>
            Anything
          </p>
          <div
            class="euiSpacer euiSpacer--l css-jz428s-euiSpacer-l"
          />
          <div
            aria-label="aria-label"
            class="euiTabs euiTabs--large euiTabs--condensed testClass1 testClass2"
            data-test-subj="test subject string"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="euiTab euiTab-isSelected"
              role="tab"
              type="button"
            >
              <span
                class="euiTab__content"
              >
                Tab 1
              </span>
            </button>
            <button
              aria-selected="false"
              class="euiTab"
              role="tab"
              type="button"
            >
              <span
                class="euiTab__content"
              >
                Tab 2
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          aria-label="aria-label"
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap testClass1 testClass2 css-dl3a9l-rightSideFlexItem"
          data-test-subj="test subject string"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 1
            </button>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button>
              Button 2
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props responsive is rendered as false 1`] = `
<header
  class="euiPageHeader css-87zvdi-euiPageHeader-EuiPageHeader"
>
  <div
    class="euiPageHeaderContent css-8hff4w-euiPageHeaderContent-euiPageHeaderWidth"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      />
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props responsive is rendered as reverse 1`] = `
<header
  class="euiPageHeader css-87zvdi-euiPageHeader-EuiPageHeader"
>
  <div
    class="euiPageHeaderContent css-8hff4w-euiPageHeaderContent-euiPageHeaderWidth"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      />
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props restrictWidth is rendered as custom 1`] = `
<header
  class="euiPageHeader css-87zvdi-euiPageHeader-EuiPageHeader"
>
  <div
    class="euiPageHeaderContent css-1rkinpv-euiPageHeaderContent-euiPageHeaderWidth"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      />
    </div>
  </div>
</header>
`;

exports[`EuiPageHeader props restrictWidth is rendered as true 1`] = `
<header
  class="euiPageHeader css-87zvdi-euiPageHeader-EuiPageHeader"
>
  <div
    class="euiPageHeaderContent css-lisi1m-euiPageHeaderContent-euiPageHeaderWidth"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
    >
      <div
        class="euiFlexItem"
      />
    </div>
  </div>
</header>
`;
